load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "db-load-tester_lib",
    srcs = [
        "clickhouse.go",
        "main.go",
        "ratelimiter.go",
        "recorder.go",
        "runner.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//lib/go/clickhouse",
        "@com_github_clickhouse_clickhouse_go//:clickhouse-go",
        "@com_github_jamiealquiza_tachymeter//:tachymeter",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_schollz_progressbar_v3//:progressbar",
    ],
)

go_binary(
    name = "db-load-tester",
    embed = [":db-load-tester_lib"],
    visibility = ["//visibility:public"],
)
